--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,11 @@ services:
     ports:
       - "9090:9090"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://stat_postgres:5432/stats_data_base
+      SPRING_DATASOURCE_URL: jdbc:postgresql://stat_postgres_db:5432/stats_data_base
       SPRING_DATASOURCE_USERNAME: user
       SPRING_DATASOURCE_PASSWORD: password
     depends_on:
-      - stat_postgres
+      - stat_postgres_db
 
 
   stat_postgres_db:
@@ -25,3 +25,6 @@ services:
       - "5432:5432"
     volumes:
       - stat_postgres_data:/var/lib/postgresql/data
+
+volumes:
+  stat_postgres_data:
